test/e2e/invalid/bufread_nonbuffer.mylang
{
    define x of int32 = 5;
    define y of int32 = bufread(x, 0);
}
